# my-static-site-generator

./: .envrc  .gitignore  Justfile  Makefile  README.md  TODO  build.nix  default.nix  dune-project  my_static_site_generator.opam  shell.nix
.zed/: settings.json
content/components/: header.html
content/css/: custom.css  highlight.css  simple.css
content/highlight/: highlight.min.js
content/pages/: index.md
content/pages/posts/: algebraic-types.json  algebraic-types.md  errors.json  errors.md  errors.md.wip  minimal-scala-container-images.json  minimal-scala-container-images.md  pinning-nixpkgs-without-flakes.json  pinning-nixpkgs-without-flakes.md  post1.json  post1.md  post2.json  (+1 more)
content/templates/: blog.html  blog.new.html  feed.xml  header.html  index.html  index.new.html  post-preview.html  post.html  post.new.html  template.html
docs/: Templating Engine.md  Templating.md
lib/: dune
npins/: sources.json
scripts/: deploy  deploy.nu  generate  serve  watch-generate
site-generator/: .gitignore  .ocamlformat  LICENSE.md  Makefile  README.md  build.nix  default.nix  dune-project  my_static_site_generator.opam  shell-template.nix  shell.nix  website-generator.opam
site-generator/doc/: dune  index.mld
site-generator/lib/: Context.ml  Context.mli  Generator.ml  Generator.mli  Location.ml  Location.mli  MySequence.ml  NonEmptyStack.ml  NonEmptyStack.mli  Parser.ml  Parser.mli  Subst.ml  Subst.mli  Syntax.ml  Templating.ml  TemplatingEngine.ml  TemplatingEngine.mli  Tokenizer.ml  Tokenizer.mli  dune
site-generator/test/: dune
test/: dune
