(lang dune 3.17)

(name website-generator)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name website-generator)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  (ocaml (= 5.3.0))
  dune 
  core
  core_unix
  yojson
  cmarkit
  (lambdasoup (>= 1.1.1)))
 (tags
  (topics "to describe" your project)))

(subst disabled)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
